# BirdFC

./: CMakeFunctions.txt  CMakeLists.txt  README.md  license.txt
examples/mpu9250_std_out/: mpu9250_std_out.cpp
lib/catch/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: actuation.cpp  actuation.h  actuator.cpp  actuator.h  bird.cpp  bird.h  configuration.cpp  configuration.h  control.h  i2c.cpp  i2c.h  pid.cpp  pid.h  sensor.cpp  sensor.h  utils.cpp  utils.h
src/actuators/: pca9685.cpp  pca9685.h  pca9685_constants.h  screen.cpp  screen.h  std_out.cpp  std_out.h
src/controls/: gamepad.cpp  gamepad.h
src/core/: actuator.cpp  actuator.h  bird.cpp  bird.h  control.cpp  control.h  i2c.cpp  i2c.h  imu.cpp  imu.h  main.cpp  pid.cpp  pid.h  sensor.h  utils.cpp  utils.h
src/sensors/: imu.cpp  mpu9250.cpp  mpu9250.h  mpu9250_constants.h
tests/: actuation_test.cpp  actuator_std_out_test.cpp  actuator_test.cpp  configuration_test.cpp  control_test.cpp  pid.cpp  pid_test.cpp  sensor_test.cpp  utils_test.cpp
